[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mau_tex_visitor"
version = "3.0.0"
description = "A visitor for Mau that converts the AST into TeX"
authors = [{name = "Leonardo Giordani", email = "giordani.leonardo@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mau>=5.0.0,<6.0.0",
]
readme = "README.md"

[project.urls]
Home = "https://github.com/Project-Mau/mau-tex-visitor"

[project.optional-dependencies]
testing = []
development = []

[project.entry-points."mau.visitors"]
visitor = "mau_tex_visitor:TexVisitor"
